[gd_scene load_steps=6 format=3 uid="uid://kj8p7e7en42f"]

[ext_resource type="Script" uid="uid://sfwg0bthigtg" path="res://scenes/game_over/game_over.gd" id="1_cga8m"]
[ext_resource type="PackedScene" uid="uid://bfjgdvoolqd4x" path="res://components/characters/slime/slime.tscn" id="2_v3bn2"]
[ext_resource type="Resource" uid="uid://pq4m56bs2vgx" path="res://data/enemies/slime/003_blue_slime.tres" id="3_n4pqr"]
[ext_resource type="Resource" uid="uid://nlq251p32elr" path="res://data/enemies/slime/002_darkgreen_slime.tres" id="4_dogfv"]
[ext_resource type="PackedScene" uid="uid://chhkp0ptdo34c" path="res://components/envinronment/pine_tree/pine_tree.tscn" id="5_0yuc8"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_cga8m")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.21974, 0.648788, 0.485114, 1)

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Overlay" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.564706)

[node name="GameOver" type="Label" parent="GameOverScreen/Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -529.0
offset_top = 127.0
offset_right = 523.0
offset_bottom = 373.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 240
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeElapsed" type="Label" parent="GameOverScreen/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
text = "Time elapsed: %s"
vertical_alignment = 1

[node name="MonsterKilled" type="Label" parent="GameOverScreen/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -72.0
offset_right = 200.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
text = "Monster killed: %s"
vertical_alignment = 1

[node name="BulletsShooted" type="Label" parent="GameOverScreen/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -24.0
offset_right = 200.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Bullets shooted: %s"
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="GameOverScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 70)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 161.0
offset_right = 690.0
offset_bottom = 345.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "Try again"

[node name="ExitButton" type="Button" parent="GameOverScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 70)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.0
offset_top = 159.0
offset_right = -139.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "Exit"

[node name="Mobs" type="Node2D" parent="."]

[node name="Slime1" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(254, 497)

[node name="Slime2" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(335, 408)

[node name="Slime3" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(377, 523)
_resource = ExtResource("3_n4pqr")

[node name="Slime4" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(807, 183)
_resource = ExtResource("4_dogfv")

[node name="Slime5" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(1513, 866)

[node name="Slime6" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(1279, 354)

[node name="Slime7" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(860, 703)
_resource = ExtResource("4_dogfv")

[node name="Slime8" parent="Mobs" instance=ExtResource("2_v3bn2")]
position = Vector2(158, 780)

[node name="Trees" type="Node2D" parent="."]

[node name="PineTree1" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(201, 222)

[node name="PineTree2" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(692, 371)

[node name="PineTree4" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(1079, 673)

[node name="PineTree3" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(478, 705)

[node name="PineTree5" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(1221, 609)

[node name="PineTree6" parent="Trees" instance=ExtResource("5_0yuc8")]
position = Vector2(1032, 169)

[connection signal="pressed" from="GameOverScreen/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="GameOverScreen/ExitButton" to="." method="_on_exit_button_pressed"]
